--- a/gpl-release/Src/Makefile.src
+++ b/gpl-release/Src/Makefile.src
@@ -58,7 +58,7 @@ CHOWN	= %%CHOWN%%
 CHMOD	= %%CHMOD%%
 LIBS	= %%LIBS%%
 SYSFLG	= %%SYSFLG%%
-CFLAGS  = %%CFLAGS%% %%LOGIN_FLAG%%
+CFLAGS  = %%CFLAGS%%
 CKFLAGS	= %%CKFLAGS%%
 TOPDIR	= %%TOPDIR%%
 DATADIR	= %%DATADIR%%
