--- a/packaging/melange/melange.yaml
+++ b/packaging/melange/melange.yaml
@@ -38,6 +38,7 @@ pipeline:
   - uses: git-checkout
     with:
       repository: https://github.com/vejeta/conquerv5
+      branch: packaging  # TODO. Remove when finished development
       destination: /home/build/conquerv5
 
   - name: "Configure and build ConquerV5"
