--- a/packaging/melange/melange.yaml
+++ b/packaging/melange/melange.yaml
@@ -34,6 +34,8 @@ environment:
       - gawk
       - groff
       - groff-doc
+      - ghostscript  # For PostScript processing
+      - ghostscript-fonts  # This provides the standard PostScript fonts      #
 
 pipeline:
   - uses: git-checkout
