--- a/packaging/debian/control/rules
+++ b/packaging/debian/control/rules
@@ -54,6 +54,7 @@ override_dh_auto_build:
 		CFLAGS="-O2 -DNDEBUG -DBSD -DPLATFORM_LINUX -DPLATFORM_UNIX -std=gnu99 -D_GNU_SOURCE -D_DEFAULT_SOURCE -D_POSIX_C_SOURCE=200112L -fcommon -Wno-implicit-function-declaration" \
 		CKFLAGS="-O2 -DNDEBUG -DBSD -DPLATFORM_LINUX -DPLATFORM_UNIX -std=gnu99 -D_GNU_SOURCE -D_DEFAULT_SOURCE -D_POSIX_C_SOURCE=200112L -fcommon -Wno-implicit-function-declaration"
 
+
 override_dh_auto_install:
 	# Since the Makefiles don't respect DESTDIR, we need to override the paths
 	$(MAKE) install \
@@ -63,6 +64,8 @@ override_dh_auto_install:
 		BINDIR="$(CURDIR)/debian/conquerv5$(BINDIR)" \
 		CHOWN="true" \
 		CHMOD="chmod"
+	# Manually install missing binaries (like conqsort)
+	install -D -m755 Auxil/conqsort  "$(CURDIR)/debian/conquerv5/usr/bin/conqsort"
 
 override_dh_auto_clean:
 	# Clean build artifacts
